<resources>
    <string name="app_name">AgileBudgeting</string>
    <string name="planCreateButton">Create Plan</string>
    <string name="planPeriodLabel">Period Beginning</string>
    <string name="totalPlannedSpend">Total Spend Planned</string>
    <string name="totalDepositsLabel">Total Deposits</string>
    <string name="expenseDepositsDifferenceLabel">Difference</string>
    <string name="addPlannedExpenseButton">Add Planned Expense</string>
    <string name="addDepositButton">Add Deposit</string>
    <string name="addActualExpenseButton">Add Actual Expense</string>
    <string name="closePlanningButton">Close Planning (no new deposits/planned expenses)</string>
    <string name="viewButton">View</string>
    <string name="plannedExpensePeriodLabel">Planned expense for period beginning</string>
    <string name="plannedExpenseDescriptionLabel">Description</string>
    <string name="plannedExpenseAmountLabel">Amount</string>
    <string name="plannedExpenseAccountLabel">Account</string>
    <string name="plannedExpenseSaveButton">Save</string>
    <string name="plannedExpenseClearButton">Clear</string>
    <string name="plannedExpenseBackButton">Back</string>
    <string name="plannedExpenseDescriptionHint">Enter a description for this expense</string>
    <string name="plannedExpenseAmountHint">Enter the amount of the expense as a positive number</string>
    <string name="plannedExpenseAccountHint">Enter the account you\'re planning to spend from</string>
    <string name="depositPeriodLabel">Deposit for period beginning</string>
    <string name="depositDescriptionLabel">Description</string>
    <string name="depositAmountLabel">Amount</string>
    <string name="depositAccountLabel">Account</string>
    <string name="depositSaveButton">Save</string>
    <string name="depositClearButton">Clear</string>
    <string name="depositBackButton">Back</string>
    <string name="depositDescriptionHint">Enter a description for this deposit</string>
    <string name="depositAmountHint">Enter the amount of the deposit as a positive number</string>
    <string name="depositAccountHint">Enter the account the deposit went into</string>
    <string name="depositDateLabel">Deposit Date</string>
    <string name="depositDateHint">Enter date of deposit</string>
    <string name="listBackButton">Back to plan</string>
    <string name="editButtonText">Edit</string>
    <string name="selectPlanDatePrompt">Select date for plan</string>
    <string name="actualExpensePeriodLabel">Actual expense for period beginning</string>
    <string name="actualExpenseDescriptionLabel">Description</string>
    <string name="actualExpenseAmountLabel">Amount</string>
    <string name="actualExpenseAccountLabel">Account</string>
    <string name="actualExpenseUnplannedButton">Unplanned Expense</string>
    <string name="actualExpenseClearButton">Clear</string>
    <string name="actualExpenseBackButton">Back</string>
    <string name="actualExpenseDescriptionHint">Enter a description for this expense</string>
    <string name="actualExpenseAmountHint">Enter the amount of the expense as a positive number</string>
    <string name="actualExpenseAccountHint">Enter the account the expense came out of</string>
    <string name="actualExpenseDateLabel">Expense Date</string>
    <string name="actualExpenseDateHint">Enter date of expense</string>
    <string name="totalActualSpendLabel">Total actual</string>
    <string name="planActualDifferenceLabel">Planned-Actual Difference</string>
    <string name="actualExpenseMatchButton">Select Planned Expense to Match</string>
    <string name="saveMatchesButton">Save</string>
    <string name="closeActualsButton">Close Recording of Actuals</string>
</resources>
