<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathon.agilebudgeting.PlanActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/planPeriodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planPeriodLabel"
            android:labelFor="@+id/periodBeginDate"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/periodBeginDate"
            android:textSize="14sp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="2" />

        <TextView
            android:text="@string/totalPlannedSpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPlannedSpendLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPlannedSpendDisplay"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:text="@string/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewPlannedExpensesButton"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="viewPlannedExpenses"/>

        <TextView
            android:text="@string/totalDepositsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalDepositsLabel"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalDepositsDisplay"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:text="@string/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewDepositsButton"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="viewDeposits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expenseDepositsDifferenceLabel"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/expenseDepositsDifferenceLabel" />

        <TextView
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expenseDepositsDifferenceDisplay"
            android:layout_row="3"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalActualSpendLabel"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/totalActualSpendLabel" />

        <TextView
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalActualSpendDisplay"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:text="@string/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewActualExpensesButton"
            android:layout_row="4"
            android:layout_column="3"
            android:onClick="viewActualExpenses"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planActualDifferenceLabel"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/planActualDifferenceLabel" />

        <TextView
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planActualDifferenceDisplay"
            android:layout_row="5"
            android:layout_column="2" />

        <Button
            android:text="@string/addPlannedExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addPlannedExpenseButton"
            android:layout_row="13"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:onClick="addPlannedExpense" />

        <Button
            android:text="@string/addDepositButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addDepositButton"
            android:layout_row="14"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:onClick="addDeposit"/>

        <Button
            android:text="@string/addActualExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addActualExpenseButton"
            android:layout_row="15"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:onClick="addActualExpense"/>

        <Button
            android:text="@string/closePlanningButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/closePlanningButton"
            android:layout_row="16"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:onClick="closePlanning"/>

        <Button
            android:text="@string/closeActualsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/closeActualsButton"
            android:layout_row="17"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:onClick="closeActuals"/>

    </GridLayout>

</RelativeLayout>
